tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__generation_using_library_config@RawMyLibError.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using SomeOrg.SomeModule;
using We.Also.Need.This;
using OurOrg.OurRustLib.Diplomat;
#pragma warning restore 0105

namespace OurOrg.OurRustLib.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct MyLibError
{
    private const string NativeLib = "mylib";

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyLibError_to_display", ExactSpelling = true)]
    public static unsafe extern void ToDisplay(MyLibError* self, DiplomatWrite* out);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyLibError_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(MyLibError* self);
}
